# tdd-dsl

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GIT_HYGIENE.md  README.md  RESEARCH.md  SPEC.md  TEST_DOUBLES_ARCHITECTURE.md  TICKETS.md
docs/emitters/: csharp.md  go.md  java.md  odin.md  python.md  rust.md  typescript.md  zig.md
src/tdd_dsl/: __init__.py  ast.py  cli.py  lsp.py  parser.py  runner.py  runtime.py  validator.py
src/tdd_dsl/emitters/: __init__.py  gotest.py  junit.py  kotlin.py  lua.py  odin.py  pytest.py  ruby.py  rust.py  swift.py  vitest.py  xunit.py
tests/: test_cli.py  test_discover.py  test_golden_fixtures.py  test_gotest_emitter.py  test_junit_emitter.py  test_kotlin_emitter.py  test_lsp.py  test_lua_emitter.py  test_mutation_smoke.py  test_odin_emitter.py  test_packaging.py  test_parser.py  test_pytest_emitter.py  test_ruby_emitter.py  test_runner.py  test_runtime.py  test_rust_emitter.py  test_swift_emitter.py  test_test_quality.py  test_validator.py  test_vitest_emitter.py  test_xunit_emitter.py
tests/fixtures/: invalid_duplicate_steps.tdd  invalid_missing_then.tdd  invalid_semantics.tdd  mutation_corrupt_json.tdd  mutation_renamed_when.tdd  valid_billing_policy.tdd  valid_minimal.tdd  valid_typescript.tdd
tests/goldens/csharp/: valid_billing_policy.cs  valid_minimal.cs
tests/goldens/go/: valid_billing_policy_test.go  valid_minimal_test.go
tests/goldens/java/: valid_billing_policy.java  valid_minimal.java
tests/goldens/kotlin/: valid_billing_policy.kt  valid_minimal.kt
tests/goldens/lua/: valid_minimal.lua  (+1 more)
(+10 files in other folders)
